--- a/assets/style.css
+++ b/assets/style.css
@@ -3,9 +3,22 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:"Lilita One", serif;
+    font-family:Arial, Helvetica, sans-serif
 
 }
 /* Utilities */
-
+h1{
+    font-weight: bolder;
+}
+.member-card{
+    background-color: #000000;
+    padding: 0;
+}
 /* ID */
+#description{
+    color: white;
+    padding: 1rem;
+    p{
+        font-weight: 400;
+    }
+}
