--- a/assets/style.css
+++ b/assets/style.css
@@ -6,20 +6,36 @@ body{
     font-family:Arial, Helvetica, sans-serif
 
 }
+:root{
+    --our-team-danger:#e53170;
+    --our-team-link:#40adea;
+    --our-team-bgcard:#000000;
+}
 /* Utilities */
 h1{
     font-weight: bolder;
+    color: var(--our-team-danger);
 }
 .member-card{
-    background-color: #000000;
+    background-color: var(--our-team-bgcard);
     padding: 0;
-   margin: 1rem;
+    margin: 1rem;
+    h5{
+    font-weight: bolder;
+    font-size: 1rem;
+   }
 }
 /* ID */
 #description{
     color: white;
-    padding: 1rem;
+    margin-right:  6rem;
+    margin-left: 1rem;
+    padding-top: 1rem;
     p{
         font-weight: 400;
+    }
+    a{
+        color: var(--our-team-link);
+        text-decoration: none;
     }
 }
